Fix scrollbar on chrome

--- a/styles.css
+++ b/styles.css
@@ -190,27 +190,24 @@ i {
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 .drawer-contents {
-    scrollbar-width: auto;
-    scrollbar-color: #000000 rgb(0 0 0 / 0.0);
+    scrollbar-width: none;
 }
 
-/*drawer-contents Chrome, Edge, and Safari */
+/* old chromes, and maybe safari? */
 .drawer-contents::-webkit-scrollbar {
-    width: 12px;
+    display: none;
 }
 
 .drawer-contents::-webkit-scrollbar-track {
-    background: rgb(0 0 0 / 0.0);
+    background: transparent;
 }
 
 .drawer-contents::-webkit-scrollbar-corner {
-    background: rgb(0 0 0 / 0.0);
+    background: transparent;
 }
 
 .drawer-contents::-webkit-scrollbar-thumb {
-    background-color: #000000;
-    border-radius: 10px;
-    border: 4px solid #000000;
+    background: transparent;
 }
 
 .drawer-books .drawer-contents {
@@ -276,7 +273,6 @@ i {
                 box-shadow 350ms linear,
                 background 300ms linear;
 }
-
 
 .drawer-closed {
     visibility: hidden;
